# 2D-Space-Shooter-

./: CMakeLists.txt  README.md
core/: enemy_object.cpp  enemy_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  glad.c  main.cpp  player_object.cpp  player_object.h
resources/: resource_manager.cpp  resource_manager.h  sprite_renderer.cpp  sprite_renderer.h
shader/: shader.cpp  shader.h  shader.vs
texture/: texture.cpp  texture.h
